# ru-agent-eval-kit

./: LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
cases/: reliability.json  security.json
results/demo/: comparison.json  comparison.md
results/demo/baseline/: junit.xml  report.md  summary.json  traces.jsonl
results/demo/hardened/: junit.xml  report.md  summary.json  traces.jsonl
servers/: mock_mcp.py
src/ru_agent_eval/: __init__.py  cli.py  scorer.py
tests/: test_mock_mcp.py  test_scorer.py
