[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ru-agent-eval-kit"
version = "0.1.1"
description = "Sandbox-first evaluation for MCP security and agent reliability"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
ru-agent-eval = "ru_agent_eval.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
